references/cuegen/testdata/invalid/recursive_struct.go
package invalid

type RecursiveStruct struct {
	Field1 *RecursiveStruct `json:"field1"`
}
